--- a/doc/_layouts/default.html
+++ b/doc/_layouts/default.html
@@ -20,7 +20,6 @@
 
     {% if site.use_local_libraries %}
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/octicons.css" />
 
     <script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
     <script src="{{site.baseurl}}/assets/js/popper.min.js"></script>
@@ -28,7 +27,6 @@
     <script src="{{site.baseurl}}/assets/js/clipboard.min.js"></script>
     {% else %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/octicons/8.0.0/build.css" integrity="sha256-iPUhChwurLRCrDCM1+2a2LDe9pfW6Je29o/oA5VPr28=" crossorigin="anonymous" />
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
@@ -98,5 +96,12 @@
       </footer>
     </div>
   </body>
+
+  <script type="text/javascript">
+  $(document).ready(function()
+  {
+    new ClipboardJS('.copy-button');
+  });
+  </script>
 
 </html>
