--- a/doc/_layouts/tutorials.html
+++ b/doc/_layouts/tutorials.html
@@ -175,4 +175,11 @@
     </div>
   </body>
 
+  <script type="text/javascript">
+  $(document).ready(function()
+  {
+    new ClipboardJS('.copy-button');
+  });
+  </script>
+
 </html>
