--- a/doc/css/mc_rtc.css
+++ b/doc/css/mc_rtc.css
@@ -263,3 +263,10 @@ body
   margin-top: 20px;
   margin-bottom: 20px;
 }
+
+.octicon {
+  display: inline-block;
+  vertical-align: text-top;
+  fill: currentColor;
+  overflow: visible;
+}
