[doc] Avoid assets duplication

--- a/doc/_includes/head-common.html
+++ b/doc/_includes/head-common.html
@@ -4,21 +4,21 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<link rel="apple-touch-icon" sizes="180x180" href="{{site.baseurl}}/assets/favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl}}/assets/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl}}/assets/favicons/favicon-16x16.png">
-<link rel="manifest" href="{{site.baseurl}}/assets/favicons/site.webmanifest">
-<link rel="mask-icon" href="{{site.baseurl}}/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
+<link rel="apple-touch-icon" sizes="180x180" href="{{site.baseurl_root}}/assets/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="{{site.baseurl_root}}/assets/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="{{site.baseurl_root}}/assets/favicons/favicon-16x16.png">
+<link rel="manifest" href="{{site.baseurl_root}}/assets/favicons/site.webmanifest">
+<link rel="mask-icon" href="{{site.baseurl_root}}/assets/favicons/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
 {% if site.use_local_libraries %}
-<link rel="stylesheet" href="{{site.baseurl}}/assets/css/bootstrap.min.css" />
+<link rel="stylesheet" href="{{site.baseurl_root}}/assets/css/bootstrap.min.css" />
 
-<script src="{{site.baseurl}}/assets/js/jquery.min.js"></script>
-<script src="{{site.baseurl}}/assets/js/popper.min.js"></script>
-<script src="{{site.baseurl}}/assets/js/bootstrap.min.js"></script>
-<script src="{{site.baseurl}}/assets/js/clipboard.min.js"></script>
+<script src="{{site.baseurl_root}}/assets/js/jquery.min.js"></script>
+<script src="{{site.baseurl_root}}/assets/js/popper.min.js"></script>
+<script src="{{site.baseurl_root}}/assets/js/bootstrap.min.js"></script>
+<script src="{{site.baseurl_root}}/assets/js/clipboard.min.js"></script>
 {% else %}
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
@@ -34,4 +34,4 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3.0.1/es5/tex-mml-chtml.js"></script>
 {% endif %}
 
-<link href="{{site.baseurl}}/css/mc_rtc.css" rel="stylesheet">
+<link href="{{site.baseurl_root}}/css/mc_rtc.css" rel="stylesheet">
