--- a/doc/_includes/robots_display.html
+++ b/doc/_includes/robots_display.html
@@ -7,7 +7,7 @@
       {% else %}
         {% capture tooltip %}{% endcapture %}
       {% endif %}
-      <img class="mr-3 img-fluid rounded-circle" src="{{site.baseurl}}/assets/robots/{{bot.icon}}" alt="{{bot.name}}" width="75" height="75" {{tooltip}}/>
+      <img class="mr-3 img-fluid rounded-circle" src="{{site.baseurl_root}}/assets/robots/{{bot.icon}}" alt="{{bot.name}}" width="75" height="75" {{tooltip}}/>
       <div class="media-body">
         <h5 class="mt-0">{{bot.name}}</h5>
         <dl class="row">
