--- a/doc/_includes/interfaces_display.html
+++ b/doc/_includes/interfaces_display.html
@@ -1,6 +1,6 @@
 {% for itf in site.data.interfaces %}
 <div class="media features">
-  <a href="{{itf.url}}" target="blank_"><img class="mr-3 img-fluid" src="{{site.baseurl}}/assets/interfaces/{{itf.icon}}" alt="{{itf.name}}" width="75" height="75"/></a>
+  <a href="{{itf.url}}" target="blank_"><img class="mr-3 img-fluid" src="{{site.baseurl_root}}/assets/interfaces/{{itf.icon}}" alt="{{itf.name}}" width="75" height="75"/></a>
   <div class="media-body">
     <h5 class="mt-0">{{itf.name}}</h5>
     <p>{% t interfaces.{{itf.name}} %}</p>
