--- a/doc/_includes/link_tutorial.html
+++ b/doc/_includes/link_tutorial.html
@@ -1,12 +1,12 @@
-{% for cat in site.data.tutorials %}
-  {% if cat.id == include.category %}
-    {% assign category = cat %}
-    {% break %}
-  {% endif %}
-{% endfor %}
-{% for tuto in category.tutorials %}
-  {% if tuto.id == include.tutorial %}
-    <a href="{{site.baseurl}}/tutorials/{{category.id}}/{{tuto.id}}.html">{%t tutorials.{{category.id}}.{{tuto.id}}.title %}</a>
-    {% break %}
-  {% endif %}
-{% endfor %}
+{%- for cat in site.data.tutorials -%}
+  {%- if cat.id == include.category -%}
+    {%- assign category = cat -%}
+    {%- break -%}
+  {%- endif -%}
+{%- endfor -%}
+{%- for tuto in category.tutorials -%}
+  {%- if tuto.id == include.tutorial -%}
+<a href="{{site.baseurl}}/tutorials/{{category.id}}/{{tuto.id}}.html">{%-t tutorials.{{category.id}}.{{tuto.id}}.title -%}</a>
+    {%- break -%}
+  {%- endif -%}
+{%- endfor -%}
